<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="32dp">


    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/alamat_pengiriman"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/etNamaLengkap"/>

    <EditText
        android:id="@+id/etNamaLengkap"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/nama_lengkap"
        android:inputType="textPersonName"
        android:layout_marginTop="32dp"
        app:layout_constraintTop_toBottomOf="@id/tvTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <EditText
        android:id="@+id/etAlamat"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/alamat"
        android:inputType="textPostalAddress"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/etNamaLengkap"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <EditText
        android:id="@+id/etPatokan"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/patokan_alamat_lengkap"
        android:inputType="text"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/etAlamat"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <Button
        android:id="@+id/btnOrderKirim"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/order_dan_kirim"
        android:textColor="#FFFFFF"
        android:background="@drawable/rounded_button"
        android:textAllCaps="false"
        android:layout_marginTop="24dp"
        app:backgroundTint="@null"
        app:layout_constraintTop_toBottomOf="@id/etPatokan"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>